--- a/public/style/mainLobby.css
+++ b/public/style/mainLobby.css
@@ -5,12 +5,12 @@
   align-items: center;
 }
 .mainLobby-container h1 {
-  color: red;
+  color: coral;
   background-clip: text;
   -webkit-background-clip: text;
   font-weight: bolder;
   font-size: 56px;
-  font-family: Starborn;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin-bottom: 50px;
 }
 .gamesContainer {
