--- a/public/src/fonts.less
+++ b/public/src/fonts.less
@@ -1,9 +1,34 @@
 @font-face {
-    font-family: 'gemstone';
+  font-family: 'gemstone';
   src: url(../fonts/Gemstone.ttf);
 }
 
 @font-face {
-    font-family: 'Quantum';
-    src: url(../fonts/Quantum.otf);
+  font-family: 'Quantum';
+  src: url(../fonts/Quantum.otf);
+}
+
+@font-face {
+  font-family: 'aAbstractGroovy';
+  src: url(../fonts/aAbstractGroovy.otf);
+}
+
+@font-face {
+  font-family: 'KeeponTruckin';
+  src: url(../fonts/KeeponTruckin.ttf);
+}
+
+@font-face {
+  font-family: 'OMEGLE';
+  src: url(../fonts/OMEGLE.otf);
+}
+
+@font-face {
+  font-family: 'Reglisse_Back';
+  src: url(../fonts/Reglisse_Back.otf);
+}
+
+@font-face {
+  font-family: 'Milky\ Coffee';
+  src: url(../fonts/Milky\ Coffee.otf);
 }
