--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -1,41 +1,47 @@
-
 .navBar {
-    margin:0;
-    display:flex;
+    margin: 0;
+    display: flex;
     justify-content: space-between;
     background-color: #486BBD;
 
     .logo {
         // margin-left: 10px;
-        display:flex;
+        display: flex;
         justify-content: center;
         align-items: center;
-        gap:5px;
+        gap: 5px;
         flex-direction: row;
+
         span {
-            font-family: 'Quantum';
+            // font-family: 'Quantum';
+            // font-family: 'aAbstractGroovy';
+            // font-family: 'KeeponTruckin';
+            // font-family: 'OMEGLE';
+            // font-family: 'Milky\ Coffee';
+            font-family: 'Reglisse_Back';
             font-weight: bolder;
-            font-size: 30px;
+            font-size: 50px;
         }
     }
+
     img {
-        height:90px;
-        width:140px;
+        height: 90px;
+        width: 140px;
         border-radius: 50px;
     }
 
     .nav-right {
-        display:flex;
+        display: flex;
         justify-content: space-around;
         align-items: center;
-        gap:30px;
+        gap: 30px;
         margin-right: 30px;
 
         .nav-link {
             text-decoration: none;
             font-size: 24px;
-            font-family:sans-serif,serif;
-            color:black;
+            font-family: sans-serif, serif;
+            color: black;
         }
 
     }
@@ -43,22 +49,23 @@
 
 .footer {
     background-color: #486BBD;
-    padding:5px;
-    display:flex;
+    padding: 5px;
+    display: flex;
     justify-content: space-around;
-    width:100vw;
-    position:absolute;
+    width: 100vw;
+    position: absolute;
 
     img {
-        height:46px;
+        height: 46px;
     }
 }
 
 @media only screen and (max-width: 600px) {
     .navBar {
-        display:flex;
+        display: flex;
         flex-wrap: wrap;
     }
+
     // .mainLobby-container{
     //     margin-left: 100%;
     // }
