--- a/public/src/signuplogin.less
+++ b/public/src/signuplogin.less
@@ -1,10 +1,10 @@
-.full-screen-container{
+.full-screen-container {
   display: flex;
   justify-content: center;
 }
 
 .login-container {
-  background-image: linear-gradient(@Borders, @Players);
+  // background-image: linear-gradient(@Borders, @Players);
   box-shadow: 0 0 15px black;
   padding: 40px 30px;
   width: 80%;
@@ -18,85 +18,100 @@
     color: white;
     cursor: pointer;
   }
+
   margin: 30px;
 
-  button{
+  button {
     width: 300px;
     position: center;
   }
 }
-  .login-container label {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    color: #FFCB05;
-    cursor: pointer;
-  }
-  .login-container {
-    background-image: linear-gradient(@Borders, @Players);
-  }
-  .login-title {
-    margin: 0;
-    color: white;
-    text-align: center;
-    font-size: 2rem;
-    font-weight: bolder;
-  }
-  .form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 40px;
-  }
-  .input-login {
-    display: flex;
-    flex-direction: column;
-  }
-  .login-message {
-    color: white;
-    font-weight: lighter;
-    text-align: center;
-    padding: 1em;
-  }
-  .register-link {
-    color: white;
-    font-weight: lighter;
-    text-align: center;
-    padding: 2px;
-  }
-  .input-login label {
-    color: white;
-    font-weight: lighter;
-  }
-  .input-login input {
-    font-size: 1.75rem;
-    padding: 0.5em;
-    background-color: @Players;
-    color: white;
-    font-weight: 500;
-  }
-  .input-login.valid input {
-    box-shadow: 0 0 2px 1px hsl(var(--valid-hsl));
-  }
-  .input-login.error input {
-    box-shadow: 0 0 2px 1px hsl(var(--error-hsl));
-  }
-  .input-login:focus {
-    box-shadow: 0 0 2px 1px hsl(var(--primary-hsl));
-  }
-  .input-login .msg {
-    display: none;
-    font-size: 1.4rem;
-    font-weight: 500;
-  }
-  .input-login.valid .msg,
-  .input-login.error .msg {
-    display: block;
-  }
-  .input-login.valid .msg {
-    color: hsl(var(--valid-hsl));
-  }
-  .input-login.error .msg {
-    color: hsl(var(--error-hsl));
-  }
- 
+
+.login-container label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #FFCB05;
+  cursor: pointer;
+}
+
+// .login-container {
+//   background-image: linear-gradient(@Borders, @Players);
+// }
+.login-title {
+  margin: 0;
+  color: white;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bolder;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 40px;
+}
+
+.input-login {
+  display: flex;
+  flex-direction: column;
+}
+
+.login-message {
+  color: white;
+  font-weight: lighter;
+  text-align: center;
+  padding: 1em;
+}
+
+.register-link {
+  color: white;
+  font-weight: lighter;
+  text-align: center;
+  padding: 2px;
+}
+
+.input-login label {
+  color: white;
+  font-weight: lighter;
+}
+
+.input-login input {
+  font-size: 1.75rem;
+  padding: 0.5em;
+  // background-color: @Players;
+  color: white;
+  font-weight: 500;
+}
+
+.input-login.valid input {
+  box-shadow: 0 0 2px 1px hsl(var(--valid-hsl));
+}
+
+.input-login.error input {
+  box-shadow: 0 0 2px 1px hsl(var(--error-hsl));
+}
+
+.input-login:focus {
+  box-shadow: 0 0 2px 1px hsl(var(--primary-hsl));
+}
+
+.input-login .msg {
+  display: none;
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
+.input-login.valid .msg,
+.input-login.error .msg {
+  display: block;
+}
+
+.input-login.valid .msg {
+  color: hsl(var(--valid-hsl));
+}
+
+.input-login.error .msg {
+  color: hsl(var(--error-hsl));
+}
