--- a/public/style/signuplogin.css
+++ b/public/style/signuplogin.css
@@ -1,11 +1,14 @@
+.full-screen-container {
+  display: flex;
+  justify-content: center;
+}
 .login-container {
-  --color: hsl(var(--primary-dark-hsl), 0.8);
-  background-color: var(--color);
-  box-shadow: 0 0 15px var(--color);
+  box-shadow: 0 0 15px black;
   padding: 40px 30px;
   width: 80%;
   max-width: 600px;
   border-radius: 20px;
+  margin: 30px;
 }
 .login-container label {
   display: flex;
@@ -14,60 +17,54 @@
   color: white;
   cursor: pointer;
 }
+.login-container button {
+  width: 300px;
+  position: center;
+}
 .login-container label {
   display: flex;
   align-items: center;
   gap: 10px;
   color: #FFCB05;
   cursor: pointer;
-  background-color: #FFCB05;
-}
-.login-container * {
-  --color: hsl(var(--primary-dark-hsl), 0.8);
-  background-image: linear-gradient(red, orange);
 }
 .login-title {
   margin: 0;
-  color: #003A70;
+  color: white;
   text-align: center;
   font-size: 2rem;
   font-weight: bolder;
-  background-color: #FFCB05;
 }
 .form {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin-top: 40px;
-  background-color: #FFCB05;
 }
 .input-login {
   display: flex;
   flex-direction: column;
 }
 .login-message {
-  color: #003A70;
+  color: white;
   font-weight: lighter;
   text-align: center;
   padding: 1em;
-  background-color: #FFCB05;
 }
 .register-link {
-  color: #003A70;
+  color: white;
   font-weight: lighter;
   text-align: center;
   padding: 2px;
-  background-color: #FFCB05;
 }
 .input-login label {
-  color: #003A70;
+  color: white;
   font-weight: lighter;
 }
 .input-login input {
   font-size: 1.75rem;
   padding: 0.5em;
-  background-color: #C85048;
-  color: #003A70;
+  color: white;
   font-weight: 500;
 }
 .input-login.valid input {
