--- a/public/style/style.css
+++ b/public/style/style.css
@@ -15,6 +15,26 @@ h1 {
   font-family: 'Quantum';
   src: url(../fonts/Quantum.otf);
 }
+@font-face {
+  font-family: 'aAbstractGroovy';
+  src: url(../fonts/aAbstractGroovy.otf);
+}
+@font-face {
+  font-family: 'KeeponTruckin';
+  src: url(../fonts/KeeponTruckin.ttf);
+}
+@font-face {
+  font-family: 'OMEGLE';
+  src: url(../fonts/OMEGLE.otf);
+}
+@font-face {
+  font-family: 'Reglisse_Back';
+  src: url(../fonts/Reglisse_Back.otf);
+}
+@font-face {
+  font-family: 'Milky\ Coffee';
+  src: url(../fonts/Milky\ Coffee.otf);
+}
 .cookies-container {
   display: flex;
   justify-content: center;
@@ -134,7 +154,6 @@ button:disabled {
   justify-content: center;
 }
 .login-container {
-  background-image: linear-gradient(#66ADDB, #072A41);
   box-shadow: 0 0 15px black;
   padding: 40px 30px;
   width: 80%;
@@ -159,9 +178,6 @@ button:disabled {
   gap: 10px;
   color: #FFCB05;
   cursor: pointer;
-}
-.login-container {
-  background-image: linear-gradient(#66ADDB, #072A41);
 }
 .login-title {
   margin: 0;
@@ -199,7 +215,6 @@ button:disabled {
 .input-login input {
   font-size: 1.75rem;
   padding: 0.5em;
-  background-color: #072A41;
   color: white;
   font-weight: 500;
 }
@@ -425,11 +440,11 @@ button:disabled {
   font-weight: 600;
   font-size: 30px;
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-  background-image: url('https://t3.ftcdn.net/jpg/03/51/32/50/360_F_351325048_SNzPFn1qGEVtEqqoxw8SANC12IauVSYo.jpg');
+  background-image: url('https://img.freepik.com/free-vector/colorful-confetti-background_52683-68126.jpg?w=2000');
   background-position: center;
   background-size: cover;
   width: 70%;
-  height: 70%;
+  height: 70vh;
   border-radius: 50%;
   box-shadow: 0px 0px 8px 10px #072A41;
   margin: auto;
@@ -440,13 +455,16 @@ button:disabled {
   font-family: Comic Sans MS, Comic Sans, cursive;
 }
 .winner-title .title-word-1 {
-  padding: 25% 5% 0 5%;
+  padding: 13% 5% 0 5%;
   --color-1: #5553df;
   --color-2: #3D8DAE;
   --color-3: #9a47e8;
 }
 .winner-title .title-word-2 {
   color: orange;
+}
+.winner-title .title-word-2 .losers {
+  margin: 0;
 }
 @keyframes color-animation {
   0% {
@@ -526,9 +544,9 @@ button:disabled {
   flex-direction: row;
 }
 .navBar .logo span {
-  font-family: 'Quantum';
+  font-family: 'Reglisse_Back';
   font-weight: bolder;
-  font-size: 30px;
+  font-size: 50px;
 }
 .navBar img {
   height: 90px;
