fixed CSS and sped up moles

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -168,6 +168,7 @@ button:disabled {
   justify-content: center;
 }
 .login-container {
+  background-image: linear-gradient(#66ADDB, #072A41);
   box-shadow: 0 0 15px black;
   padding: 40px 30px;
   width: 80%;
@@ -192,6 +193,9 @@ button:disabled {
   gap: 10px;
   color: #FFCB05;
   cursor: pointer;
+}
+.login-container {
+  background-image: linear-gradient(#66ADDB, #072A41);
 }
 .login-title {
   margin: 0;
@@ -229,6 +233,7 @@ button:disabled {
 .input-login input {
   font-size: 1.75rem;
   padding: 0.5em;
+  background-color: #072A41;
   color: white;
   font-weight: 500;
 }
