--- a/public/src/signuplogin.less
+++ b/public/src/signuplogin.less
@@ -99,4 +99,14 @@
   .input-login.error .msg {
     color: hsl(var(--error-hsl));
   }
+
+  form.form{
+    display: flex;
+    button{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 80px;
+    }
+  }
  
