--- a/public/style/style.css
+++ b/public/style/style.css
@@ -82,6 +82,8 @@ h1 {
 .login-button {
   font-size: 1.6em;
   margin: 1em;
+  text-shadow: 0 0 0.125em lightgrey, 0 0 0.5em #1D397A;
+  box-shadow: inset 0 0 0.5em 0 #1D397A, 0 0 0.5em 0 #486BBD;
 }
 .logout-button {
   position: fixed;
@@ -110,12 +112,12 @@ button::before {
   pointer-events: none;
   content: "";
   position: absolute;
-  background-color: #1D397A;
+  background-color: black;
   top: 120%;
   left: 0;
   width: 100%;
   height: 100%;
-  transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+  transform: perspective(1.5em) rotateX(50deg) scale(0.75, 0.35);
   filter: blur(1.5em);
   opacity: 0.7;
 }
@@ -261,6 +263,15 @@ button:disabled {
 .input-login.error .msg {
   color: hsl(var(--error-hsl));
 }
+form.form {
+  display: flex;
+}
+form.form button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 80px;
+}
 .lobbyContainer {
   display: flex;
   justify-content: center;
@@ -360,10 +371,19 @@ button:disabled {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-around;
-  gap: 25px;
+  justify-content: space-evenly;
+  gap: 20px;
   border: none;
   width: 100%;
+  margin: 70px;
+}
+.mainLobby-players-container h4 {
+  color: yellow;
+  text-shadow: 2px 2px black;
+}
+.mainLobby-players-container .avatar {
+  font-size: 2em;
+  text-align: center;
 }
 .single-lobby-player {
   width: 130px;
@@ -386,6 +406,15 @@ button:disabled {
 }
 .eachGame:hover {
   box-shadow: 0 0 0.5em 0.2em lightcoral;
+}
+.gameThree-mainLobby-container {
+  width: 300px;
+  height: 300px;
+  background-image: url("../images/cookie\ background.jpg");
+  background-size: cover;
+  border-radius: 20px;
+  margin-bottom: 10px;
+  background-image: url("../images/memoryGame.png");
 }
 .cookieClicker-loading-screen {
   display: flex;
@@ -677,14 +706,141 @@ button:disabled {
   height: 40px;
   border-radius: 5px;
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.memoryWrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+.memoryWrapper h1 {
+  margin: 20px;
+}
+.memoryWrapper h2 {
+  margin: 20px;
+  color: white;
+}
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #6563FF;
+}
+.memory-wrapper {
+  padding: 25px;
+  border-radius: 10px;
+  background: #F8F8F8;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+}
+.cards,
+.card,
+.view {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cards {
+  height: 400px;
+  width: 400px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.cards .card {
+  cursor: pointer;
+  list-style: none;
+  user-select: none;
+  position: relative;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+  height: calc(100% / 4 - 10px);
+  width: calc(100% / 4 - 10px);
+}
+.card.shake {
+  animation: shake 0.35s ease-in-out;
+}
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  20% {
+    transform: translateX(-13px);
+  }
+  40% {
+    transform: translateX(13px);
+  }
+  60% {
+    transform: translateX(-8px);
+  }
+  80% {
+    transform: translateX(8px);
+  }
+}
+.card .view {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 7px;
+  background: #fff;
+  pointer-events: none;
+  backface-visibility: hidden;
+  box-shadow: 0 3px 10px black;
+  transition: transform 0.25s linear;
+}
+.card .front-view img {
+  width: 19px;
+}
+.card .back-view img {
+  max-width: 45px;
+}
+.card .back-view {
+  transform: rotateY(-180deg);
+}
+.card.flip .back-view {
+  transform: rotateY(0);
+}
+.card.flip .front-view {
+  transform: rotateY(180deg);
+}
+@media screen and (max-width: 700px) {
+  .cards {
+    height: 350px;
+    width: 350px;
+  }
+  .card .front-view img {
+    width: 17px;
+  }
+  .card .back-view img {
+    max-width: 40px;
+  }
+}
+@media screen and (max-width: 530px) {
+  .cards {
+    height: 300px;
+    width: 300px;
+  }
+  .card .front-view img {
+    width: 15px;
+  }
+  .card .back-view img {
+    max-width: 35px;
+  }
+}
+.material-icons {
+  color: #574FC2;
+  font-size: 4em;
+}
 body {
   height: 100%;
   width: 100vw;
   display: grid;
   place-items: center;
   background-image: linear-gradient(#7C72E0, #3D35A7, #7C72E0);
-  color: var(--clr-btn);
-  margin: 0;
 }
 html {
   height: 100%;
@@ -696,6 +852,10 @@ html {
 .wrapper {
   min-height: 100vh;
   background-image: linear-gradient(#7C72E0, #3D35A7, #7C72E0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 .wrapper h1 {
   display: flex;
