--- a/public/style/buttons.css
+++ b/public/style/buttons.css
@@ -6,6 +6,8 @@
 .login-button {
   font-size: 1.6em;
   margin: 1em;
+  text-shadow: 0 0 0.125em lightgrey, 0 0 0.5em #1D397A;
+  box-shadow: inset 0 0 0.5em 0 #1D397A, 0 0 0.5em 0 #486BBD;
 }
 .logout-button {
   position: fixed;
@@ -34,12 +36,12 @@ button::before {
   pointer-events: none;
   content: "";
   position: absolute;
-  background-color: #1D397A;
+  background-color: black;
   top: 120%;
   left: 0;
   width: 100%;
   height: 100%;
-  transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+  transform: perspective(1.5em) rotateX(50deg) scale(0.75, 0.35);
   filter: blur(1.5em);
   opacity: 0.7;
 }
