--- a/public/style/mainLobby.css
+++ b/public/style/mainLobby.css
@@ -61,10 +61,19 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-around;
-  gap: 25px;
+  justify-content: space-evenly;
+  gap: 20px;
   border: none;
   width: 100%;
+  margin: 70px;
+}
+.mainLobby-players-container h4 {
+  color: yellow;
+  text-shadow: 2px 2px black;
+}
+.mainLobby-players-container .avatar {
+  font-size: 2em;
+  text-align: center;
 }
 .single-lobby-player {
   width: 130px;
@@ -87,4 +96,13 @@
 }
 .eachGame:hover {
   box-shadow: 0 0 0.5em 0.2em lightcoral;
+}
+.gameThree-mainLobby-container {
+  width: 300px;
+  height: 300px;
+  background-image: url("../images/cookie\ background.jpg");
+  background-size: cover;
+  border-radius: 20px;
+  margin-bottom: 10px;
+  background-image: url("../images/memoryGame.png");
 }
