--- a/public/src/cookieLobby.less
+++ b/public/src/cookieLobby.less
@@ -21,7 +21,6 @@
 .PlayersContainer {
   height:81vh;
     display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
@@ -30,11 +29,16 @@
     border-style: ridge;
     padding: 10px;
     color: white;
-    background-color: orange
+    background-color: orange;
+    border-radius: 25px;
+    font-family: "kidGames";
+    
 }
 
 .infoDiv {
     border-style: ridge;
     padding: 10px;
     background-color: bisque;
+    border-radius: 25px;
+    font-family: "kidGames";
 }
