--- a/public/style/style.css
+++ b/public/style/style.css
@@ -282,7 +282,6 @@ button:disabled {
 .PlayersContainer {
   height: 81vh;
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
@@ -291,11 +290,15 @@ button:disabled {
   padding: 10px;
   color: white;
   background-color: orange;
+  border-radius: 25px;
+  font-family: "kidGames";
 }
 .infoDiv {
   border-style: ridge;
   padding: 10px;
   background-color: bisque;
+  border-radius: 25px;
+  font-family: "kidGames";
 }
 .mainLobby-container {
   display: flex;
