added CSS to selector and main lobby

--- a/public/src/fonts.less
+++ b/public/src/fonts.less
@@ -32,3 +32,8 @@
   font-family: 'Starborn';
   src: url(../fonts/Starborn.ttf);
 }
+
+@font-face {
+  font-family: 'Tourner';
+  src: url(../fonts/Tourner.ttf);
+}
