--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -13,7 +13,7 @@
         flex-direction: row;
 
         span {
-            font-family: 'surfQuestTidal';
+            font-family: 'Tourner';
             font-size: 4em;
             text-shadow: 1px 1px lightgrey;
         }
