--- a/public/src/signuplogin.less
+++ b/public/src/signuplogin.less
@@ -109,4 +109,53 @@
       margin-left: 80px;
     }
   }
- 
+
+  select {
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    -ms-appearance:none;
+    appearance:none;
+    outline:0;
+    box-shadow:none;
+    border:0!important;
+    background: @Players;
+    background-image: none;
+    flex: 1;
+    padding: 0 .5em;
+    color:#fff;
+    cursor:pointer;
+    font-size: 1em;
+    font-family: 'Open Sans', sans-serif;
+ }
+ select::-ms-expand {
+    display: none;
+ }
+ .select {
+    position: relative;
+    display: flex;
+    width: 29em;
+    height: 3em;
+    line-height: 3;
+    background: @Players;
+    overflow: hidden;
+    border-radius: .25em;
+    justify-content: center;
+ }
+ .select::after {
+    content: '\25BC';
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0 1em;
+    background: @User;
+    cursor:pointer;
+    pointer-events:none;
+    transition:.25s all ease;
+ }
+ .select:hover::after {
+    color: @cookieLobbyBorders;
+ }
+
+a:visited{
+  color:white;
+}
