changed h2 color to white in main lobby

--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -15,6 +15,9 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-bottom: 50px;
   }
+  h2{
+    color: white;
+  }
 }
 
 
