--- a/public/style/fonts.css
+++ b/public/style/fonts.css
@@ -26,3 +26,7 @@
   font-family: 'Starborn';
   src: url(../fonts/Starborn.ttf);
 }
+@font-face {
+  font-family: 'Tourner';
+  src: url(../fonts/Tourner.ttf);
+}
