--- a/public/style/mainLobby.css
+++ b/public/style/mainLobby.css
@@ -61,9 +61,10 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   gap: 20px;
   border: none;
+  max-width: 900px;
   width: 100%;
   margin: 70px;
 }
