--- a/public/style/nav-footer.css
+++ b/public/style/nav-footer.css
@@ -12,7 +12,7 @@
   flex-direction: row;
 }
 .navBar .logo span {
-  font-family: 'surfQuestTidal';
+  font-family: 'Tourner';
   font-size: 4em;
   text-shadow: 1px 1px lightgrey;
 }
