--- a/public/style/style.css
+++ b/public/style/style.css
@@ -375,6 +375,9 @@ a:visited {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin-bottom: 50px;
 }
+.mainLobby-container h2 {
+  color: white;
+}
 .gamesContainer {
   display: inline-flex;
   justify-content: space-around;
