--- a/public/src/cookieLobby.less
+++ b/public/src/cookieLobby.less
@@ -1,40 +1,42 @@
 .lobbyContainer {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
     button{
       margin-left: 0;
     }
+    margin-top: 5vh;
 }
 
 .welcome {
     color: coral;
   text-shadow: 2px 2px 2px #000000;
   font-weight: bolder;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
 }
 
 .PlayersContainer {
-  height:81vh;
+  height:20vh;
     display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin-top: 10vh;
+  gap: 1em
 }
 
 .players {
     border-style: ridge;
     padding: 10px;
     color: white;
-    background-color: orange
+    background-color: orange;
+    border-radius: 25px;
+    font-family: "kidGames";
+    
 }
 
 .infoDiv {
     border-style: ridge;
     padding: 10px;
     background-color: bisque;
+    border-radius: 25px;
+    font-family: "kidGames";
 }
