--- a/public/style/style.css
+++ b/public/style/style.css
@@ -326,9 +326,9 @@ a:visited {
 }
 .lobbyContainer {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin-top: 5vh;
 }
 .lobbyContainer button {
   margin-left: 0;
@@ -337,28 +337,29 @@ a:visited {
   color: coral;
   text-shadow: 2px 2px 2px #000000;
   font-weight: bolder;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
 }
 .PlayersContainer {
-  height: 81vh;
+  height: 20vh;
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
+  margin-top: 10vh;
+  gap: 1em;
 }
 .players {
   border-style: ridge;
   padding: 10px;
   color: white;
   background-color: orange;
+  border-radius: 25px;
+  font-family: "kidGames";
 }
 .infoDiv {
   border-style: ridge;
   padding: 10px;
   background-color: bisque;
+  border-radius: 25px;
+  font-family: "kidGames";
 }
 .mainLobby-container {
   display: flex;
@@ -911,7 +912,6 @@ html {
   background-image: linear-gradient(#7C72E0, #3D35A7, #7C72E0);
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
 }
 .wrapper h1 {
