--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -43,12 +43,13 @@
             text-decoration: none;
             font-size: 2.5em;
             font-family:"surfQuest";
-            color:black;
+            color:white;
             text-shadow: 1px 1px grey;
         }
         span {
-            font-family: cursive,serif;
+            font-family: fantasy;
             font-size:24px;
+            color:white;
         }
 
     }
@@ -56,14 +57,15 @@
 
 .footer {
     background-color: #486BBD;
-    padding:5px;
+    // padding:5px;
     display:flex;
     justify-content: space-around;
     width:100vw;
     position:absolute;
+    color:white;
 
-    img {
-        height:46px;
+    .footer-github{
+        font-size: 40px;
     }
 }
 
@@ -72,7 +74,5 @@
         display:flex;
         flex-wrap: wrap;
     }
-    // .mainLobby-container{
-    //     margin-left: 100%;
-    // }
+
 }
