--- a/public/src/profile.less
+++ b/public/src/profile.less
@@ -1,12 +1,12 @@
 .profile {
-    // margin: 0;
-    // padding:0;
-    // background-color: white;
-    text-align: center;
-    // height: calc(100% - 150px);
+    margin:auto;
+    width:400px;
+    text-align: start;
+    padding:20px;
     h2 {
         font-weight: bold;
-        margin-top: 20px;
+        margin-top: 40px;
+        color:rgb(251, 237, 237);
     }
 }
 
@@ -22,6 +22,8 @@
     .form-title {
         font-size: 20px;
         font-weight: bold;
+        margin:auto;
+        text-align: center;
     }
 
     form {
