--- a/public/style/style.css
+++ b/public/style/style.css
@@ -590,23 +590,24 @@ button:disabled {
   text-decoration: none;
   font-size: 2.5em;
   font-family: "surfQuest";
-  color: black;
+  color: white;
   text-shadow: 1px 1px grey;
 }
 .navBar .nav-right span {
-  font-family: cursive,serif;
+  font-family: fantasy;
   font-size: 24px;
+  color: white;
 }
 .footer {
   background-color: #486BBD;
-  padding: 5px;
   display: flex;
   justify-content: space-around;
   width: 100vw;
   position: absolute;
+  color: white;
 }
-.footer img {
-  height: 46px;
+.footer .footer-github {
+  font-size: 40px;
 }
 @media only screen and (max-width: 600px) {
   .navBar {
@@ -633,11 +634,15 @@ button:disabled {
   background-image: url("https://i.ebayimg.com/images/g/miwAAOSw6GVjTNc~/s-l500.png");
 }
 .profile {
-  text-align: center;
+  margin: auto;
+  width: 400px;
+  text-align: start;
+  padding: 20px;
 }
 .profile h2 {
   font-weight: bold;
-  margin-top: 20px;
+  margin-top: 40px;
+  color: #fbeded;
 }
 .editProfile {
   background-color: #8eb5f4;
@@ -651,6 +656,8 @@ button:disabled {
 .editProfile .form-title {
   font-size: 20px;
   font-weight: bold;
+  margin: auto;
+  text-align: center;
 }
 .editProfile form {
   display: flex;
