winner page, chart

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -24,6 +24,7 @@ h1 {
 @import './nav-footer.less';
 @import './whackAMole.less';
 @import './profile.less';
+@import './chart.less';
 
 body {
   // height: 100vh;
