--- a/public/style/style.css
+++ b/public/style/style.css
@@ -168,6 +168,7 @@ button:disabled {
   justify-content: center;
 }
 .login-container {
+  background-image: linear-gradient(#66ADDB, #072A41);
   box-shadow: 0 0 15px black;
   padding: 40px 30px;
   width: 80%;
@@ -229,6 +230,7 @@ button:disabled {
 .input-login input {
   font-size: 1.75rem;
   padding: 0.5em;
+  background-color: #072A41;
   color: white;
   font-weight: 500;
 }
@@ -452,6 +454,9 @@ button:disabled {
     }
   }
 }
+.empty-space {
+  height: 20px;
+}
 .winner-title {
   display: flex;
   justify-content: center;
@@ -459,7 +464,7 @@ button:disabled {
   flex-direction: column;
   text-align: center;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 2.3vw;
   text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
   background-image: url('https://t3.ftcdn.net/jpg/03/51/32/50/360_F_351325048_SNzPFn1qGEVtEqqoxw8SANC12IauVSYo.jpg');
   background-position: center;
@@ -476,16 +481,20 @@ button:disabled {
   font-family: Comic Sans MS, Comic Sans, cursive;
 }
 .winner-title .title-word-1 {
-  padding: 13% 5% 0 5%;
-  --color-1: #5553df;
-  --color-2: #3D8DAE;
-  --color-3: #9a47e8;
+  padding: 0% 5% 0 5%;
+  --color-1: #df536a;
+  --color-2: #00a9af;
+  --color-3: #e8d047;
 }
 .winner-title .title-word-2 {
   color: orange;
+  font-size: 2vw;
 }
 .winner-title .title-word-2 .losers {
   margin: 0;
+}
+.mole-winner-title {
+  background-image: url('https://img.freepik.com/premium-vector/winner-background-with-signs-first-second-third-place-round-pedestal-vector-winner-pod_220217-4098.jpg');
 }
 @keyframes color-animation {
   0% {
@@ -515,40 +524,12 @@ button:disabled {
   justify-content: center;
   align-items: center;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 750px) {
   .winner-title {
-    font-size: 20px;
-  }
-  .winner-title .title-word-1 {
-    padding-top: 55%;
-  }
-}
-@media screen and (min-width: 1600px) {
-  .winner-title {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1%;
+    font-size: 5vw;
   }
   .winner-title .title-word-2 {
-    margin-bottom: 30%;
-  }
-}
-@media screen and (max-height: 700px) {
-  .winner-title {
-    font-size: 20px;
-  }
-  .winner-title .title-word-1 {
-    padding: 15% 5% 0 5%;
-  }
-}
-@media screen and (max-height: 700px) and (max-width: 600px) {
-  .winner-title {
-    font-size: 15px;
-  }
-  .winner-title .title-word-1 {
-    padding: 25% 5% 0 5%;
+    font-size: 4vw;
   }
 }
 .navBar {
@@ -671,6 +652,25 @@ button:disabled {
 .editProfile .form-item input {
   height: 40px;
   border-radius: 5px;
+}
+.chart {
+  background-color: white;
+  width: 90%;
+  margin: 5%;
+  border-radius: 15px;
+  box-shadow: 0 0 5px 5px white;
+}
+.ranking {
+  text-align: center;
+  font-size: 2.5em;
+  color: white;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px black, 0 0 25px #dae9eb, 0 0 5px #8b0031;
+  font-family: sans-serif;
+  margin: 0;
+}
+.chart-empty-space {
+  height: 3em;
 }
 body {
   height: 100%;
