--- a/public/src/signuplogin.less
+++ b/public/src/signuplogin.less
@@ -4,7 +4,7 @@
 }
 
 .login-container {
-  // background-image: linear-gradient(@Borders, @Players);
+  background-image: linear-gradient(@Borders, @Players);
   box-shadow: 0 0 15px black;
   padding: 40px 30px;
   width: 80%;
@@ -80,7 +80,7 @@
 .input-login input {
   font-size: 1.75rem;
   padding: 0.5em;
-  // background-color: @Players;
+  background-color: @Players;
   color: white;
   font-weight: 500;
 }
