--- a/public/style/style.css
+++ b/public/style/style.css
@@ -400,6 +400,7 @@ a:visited {
 }
 .lobbyContainer button {
   margin-left: 0;
+  position: relative;
 }
 .welcome {
   color: coral;
@@ -979,10 +980,6 @@ body {
 }
 html {
   height: 100%;
-}
-#root {
-  width: 100vw;
-  height: 100vh;
 }
 .wrapper {
   min-height: 100vh;
