switching to main

--- a/public/src/style.less
+++ b/public/src/style.less
@@ -26,6 +26,7 @@ h1 {
 @import './profile.less';
 @import './chart.less';
 @import './memory.less';
+@import './slideGame.less';
 
 body {
   // height: 100vh;
@@ -40,10 +41,10 @@ html {
   height: 100%;
 }
 
-// #root {
-//   width: 100vw;
-//   height: 100vh;
-// }
+#root {
+  width: 100vw;
+  height: 100vh;
+}
 
 .wrapper {
   min-height: 100vh;
