--- a/public/style/style.css
+++ b/public/style/style.css
@@ -971,6 +971,23 @@ body {
   color: #574FC2;
   font-size: 4em;
 }
+#title {
+  height: 150px;
+  width: 400px;
+}
+#board {
+  width: 360px;
+  height: 360px;
+  background-color: lightblue;
+  border: 10px solid #0c67ae;
+  display: flex;
+  flex-wrap: wrap;
+}
+#board img {
+  width: 118px;
+  height: 118px;
+  border: 1px solid #0c67ae;
+}
 body {
   height: 100%;
   width: 100vw;
@@ -980,6 +997,10 @@ body {
 }
 html {
   height: 100%;
+}
+#root {
+  width: 100vw;
+  height: 100vh;
 }
 .wrapper {
   min-height: 100vh;
