switching to main

--- a/public/src/profile.less
+++ b/public/src/profile.less
@@ -1,6 +1,6 @@
 .profile {
     margin:auto;
-    width:400px;
+    width:500px;
     text-align: start;
     padding:20px;
     h2 {
@@ -8,6 +8,9 @@
         margin-top: 40px;
         color:rgb(251, 237, 237);
     }
+    box-shadow: 0 0 15px black;
+    border-radius: 20px;
+    background-image: linear-gradient(@Players, @Borders);
 }
 
 .editProfile {
