added icons to game lobbies and changed profile CSS

--- a/public/src/cookieLobby.less
+++ b/public/src/cookieLobby.less
@@ -25,12 +25,14 @@
 }
 
 .players {
+    display: flex;
     border-style: ridge;
     padding: 10px;
     color: white;
     background-color: orange;
     border-radius: 25px;
     font-family: "kidGames";
+    flex-direction: row;
     
 }
 
