--- a/public/style/style.css
+++ b/public/style/style.css
@@ -416,12 +416,14 @@ a:visited {
   gap: 1em;
 }
 .players {
+  display: flex;
   border-style: ridge;
   padding: 10px;
   color: white;
   background-color: orange;
   border-radius: 25px;
   font-family: "kidGames";
+  flex-direction: row;
 }
 .infoDiv {
   border-style: ridge;
@@ -778,9 +780,12 @@ a:visited {
 }
 .profile {
   margin: auto;
-  width: 400px;
+  width: 500px;
   text-align: start;
   padding: 20px;
+  box-shadow: 0 0 15px black;
+  border-radius: 20px;
+  background-image: linear-gradient(#072A41, #66ADDB);
 }
 .profile h2 {
   font-weight: bold;
