--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -15,7 +15,8 @@
         span {
             font-family: 'Tourner';
             font-size: 4em;
-            text-shadow: 1px 1px lightgrey;
+            text-shadow: 2px 2px black;
+            color: lightgray;
         }
     }
 
