--- a/public/src/cookieLobby.less
+++ b/public/src/cookieLobby.less
@@ -5,14 +5,21 @@
     button{
       margin-left: 0;
       position: relative;
+      margin: 40px;
     }
     margin-top: 5vh;
+    .infoDiv{
+      text-shadow: 2px 2px 2px @cookieLobbyFont;
+      font-size: 2em;
+
+    }
 }
 
 .welcome {
     color: coral;
   text-shadow: 2px 2px 2px #000000;
   font-weight: bolder;
+  margin: 40px;
 }
 
 .PlayersContainer {
@@ -21,7 +28,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 10vh;
-  gap: 1em
+  gap: 1em;
 }
 
 .players {
@@ -33,6 +40,10 @@
     border-radius: 25px;
     font-family: "kidGames";
     flex-direction: row;
+    text-shadow: 2px 2px 2px #000000;
+    .avatar {
+      margin-left: 10px;
+    }
     
 }
 
@@ -43,3 +54,4 @@
     border-radius: 25px;
     font-family: "kidGames";
 }
+
