changed all games and lobbies to remove nav bars & fixed whack-a-mole functionality

--- a/public/style/whackAMole.css
+++ b/public/style/whackAMole.css
@@ -16,3 +16,6 @@
 .mole {
   background-image: url("https://i.ebayimg.com/images/g/miwAAOSw6GVjTNc~/s-l500.png");
 }
+.hit {
+  background-image: url("https://studio.code.org/v3/assets/o7BkGtOAPgv4W1PcGfEY_zg3RZBXqekP7ovkgKtrYx0/pic5abfb8c76243f4_512x-_51645367.png");
+}
