changed CSS containers for game lobbies

--- a/public/src/winnerPage.less
+++ b/public/src/winnerPage.less
@@ -27,7 +27,8 @@
 
     .title-word {
         animation: color-animation 4s linear infinite;
-        font-family: Comic Sans MS, Comic Sans, cursive;
+        font-family: 'kidGames';
+        font-weight: lighter;
     }
 
     .title-word-1 {
