--- a/public/src/cookieLobby.less
+++ b/public/src/cookieLobby.less
@@ -7,7 +7,11 @@
       position: relative;
       margin: 40px;
     }
-    margin-top: 5vh;
+    margin: 40px;
+    box-shadow: 0 0 0.7em 0 black;
+    border-radius: 20px;
+    background-color: rgb(219, 236, 250);
+    padding: 20px;
     .infoDiv{
       text-shadow: 2px 2px 2px @cookieLobbyFont;
       font-size: 2em;
