--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -14,6 +14,7 @@
     font-size: 56px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-bottom: 50px;
+    margin-top: 50px;
   }
   h2{
     color: white;
@@ -48,7 +49,6 @@
 
     h2,
     h4 {
-      font-family: sans-serif, serif;
       color: black;
     }
 
