--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -35,25 +35,22 @@
 
         span {
             text-decoration: none;
-            font-size: 2em;
-            font-family: "surfQuest";
-            color: black;
+            font-size: 24px;
+            color:white;
             text-shadow: 1px 1px grey;
         }
 
         .nav-link {
             text-decoration: none;
             font-size: 2.5em;
-            font-family:"surfQuest";
             color:white;
-            text-shadow: 1px 1px grey;
+            text-shadow: 1px 1px black;
         }
 
-        span {
-            font-family: fantasy;
-            font-size:24px;
-            color:white;
-        }
+        // span {
+        //     font-size:24px;
+        //     color:white;
+        // }
 
     }
 }
@@ -62,14 +59,10 @@
     background-color: #486BBD;
     padding: 5px;
     display: flex;
-    justify-content: space-around;
     width:100vw;
     position:absolute;
     color:white;
-
-    .footer-github{
-        font-size: 40px;
-    }
+    height: 50px;
 }
 
 @media only screen and (max-width: 600px) {
