--- a/public/style/style.css
+++ b/public/style/style.css
@@ -169,6 +169,9 @@ button:focus::after {
 button:disabled {
   background-color: grey;
 }
+.logout-home-button {
+  font-size: 1em;
+}
 .full-screen-container {
   display: flex;
   justify-content: center;
@@ -396,7 +399,11 @@ a:visited {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 5vh;
+  margin: 40px;
+  box-shadow: 0 0 0.7em 0 black;
+  border-radius: 20px;
+  background-color: #dbecfa;
+  padding: 20px;
 }
 .lobbyContainer button {
   margin-left: 0;
@@ -456,6 +463,7 @@ a:visited {
   font-size: 56px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin-bottom: 50px;
+  margin-top: 50px;
 }
 .mainLobby-container h2 {
   color: white;
@@ -485,7 +493,6 @@ a:visited {
 }
 .eachGame .gameTitle h2,
 .eachGame .gameTitle h4 {
-  font-family: sans-serif, serif;
   color: black;
 }
 .cookieClicker-mainLobby-container {
@@ -647,7 +654,8 @@ a:visited {
 }
 .winner-title .title-word {
   animation: color-animation 4s linear infinite;
-  font-family: Comic Sans MS, Comic Sans, cursive;
+  font-family: 'kidGames';
+  font-weight: lighter;
 }
 .winner-title .title-word-1 {
   padding: 0% 5% 0 5%;
@@ -734,34 +742,24 @@ a:visited {
 }
 .navBar .nav-right span {
   text-decoration: none;
-  font-size: 2em;
-  font-family: "surfQuest";
-  color: black;
+  font-size: 24px;
+  color: white;
   text-shadow: 1px 1px grey;
 }
 .navBar .nav-right .nav-link {
   text-decoration: none;
   font-size: 2.5em;
-  font-family: "surfQuest";
   color: white;
-  text-shadow: 1px 1px grey;
-}
-.navBar .nav-right span {
-  font-family: fantasy;
-  font-size: 24px;
-  color: white;
+  text-shadow: 1px 1px black;
 }
 .footer {
   background-color: #486BBD;
   padding: 5px;
   display: flex;
-  justify-content: space-around;
   width: 100vw;
   position: absolute;
   color: white;
-}
-.footer .footer-github {
-  font-size: 40px;
+  height: 50px;
 }
 @media only screen and (max-width: 600px) {
   .navBar {
