--- a/public/style/style.css
+++ b/public/style/style.css
@@ -769,6 +769,20 @@ a:visited {
     flex-wrap: wrap;
   }
 }
+.dropdown {
+  display: inline-block;
+  position: relative;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  width: 100%;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
 #whack-a-mole {
   background-color: darkolivegreen;
   border: solid 20px #000;
