new lobby and winner page styling

--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -7,7 +7,7 @@
   align-items: center;
 
   h1 {
-    color: @header;
+    color: white;
     background-clip: text;
     -webkit-background-clip: text;
     font-weight: bolder;
