--- a/public/src/winnerPage.less
+++ b/public/src/winnerPage.less
@@ -39,12 +39,19 @@
     }
 
     .title-word-2 {
-        color: orange;
+        color: white;
+        font-family: "kidGames";
         font-size: 2vw;
 
         .losers {
             margin: 0;
+            font-family: "kidGames";
         }
+        h3{
+            font-family: "kidGames";
+        
+        }
+
     }
 
 }
