--- a/public/src/cookieLobby.less
+++ b/public/src/cookieLobby.less
@@ -20,7 +20,7 @@
 }
 
 .welcome {
-    color: coral;
+    color: white;
   text-shadow: 2px 2px 2px #000000;
   font-weight: bolder;
   margin: 40px;
@@ -40,7 +40,7 @@
     border-style: ridge;
     padding: 10px;
     color: white;
-    background-color: orange;
+    background-color: #2E51A0;;
     border-radius: 25px;
     font-family: "kidGames";
     flex-direction: row;
@@ -54,7 +54,8 @@
 .infoDiv {
     border-style: ridge;
     padding: 10px;
-    background-color: bisque;
+    color: white;
+    background-color: #2E51A0;
     border-radius: 25px;
     font-family: "kidGames";
 }
