--- a/public/style/style.css
+++ b/public/style/style.css
@@ -415,7 +415,7 @@ a:visited {
   font-size: 2em;
 }
 .welcome {
-  color: coral;
+  color: white;
   text-shadow: 2px 2px 2px #000000;
   font-weight: bolder;
   margin: 40px;
@@ -433,7 +433,7 @@ a:visited {
   border-style: ridge;
   padding: 10px;
   color: white;
-  background-color: orange;
+  background-color: #2E51A0;
   border-radius: 25px;
   font-family: "kidGames";
   flex-direction: row;
@@ -445,7 +445,8 @@ a:visited {
 .infoDiv {
   border-style: ridge;
   padding: 10px;
-  background-color: bisque;
+  color: white;
+  background-color: #2E51A0;
   border-radius: 25px;
   font-family: "kidGames";
 }
@@ -456,7 +457,7 @@ a:visited {
   align-items: center;
 }
 .mainLobby-container h1 {
-  color: coral;
+  color: white;
   background-clip: text;
   -webkit-background-clip: text;
   font-weight: bolder;
@@ -664,11 +665,16 @@ a:visited {
   --color-3: #e8d047;
 }
 .winner-title .title-word-2 {
-  color: orange;
+  color: white;
+  font-family: "kidGames";
   font-size: 2vw;
 }
 .winner-title .title-word-2 .losers {
   margin: 0;
+  font-family: "kidGames";
+}
+.winner-title .title-word-2 h3 {
+  font-family: "kidGames";
 }
 .mole-winner-title {
   background-image: url('https://img.freepik.com/premium-vector/winner-background-with-signs-first-second-third-place-round-pedestal-vector-winner-pod_220217-4098.jpg');
