--- a/public/src/buttons.less
+++ b/public/src/buttons.less
@@ -121,6 +121,9 @@ button:disabled {
     background-color: grey;
 }
 
-.logout-home-button{
-    font-size: 1em;
-}
+// .logout-home-button{
+//     // font-size: 1em;
+//     font-size:20px;
+//     width:100px;
+//     text-align: center;
+// }
