--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -20,38 +20,13 @@
         }
     }
 
-    img {
-        height: 90px;
-        width: 140px;
-        border-radius: 50px;
-    }
-
-    .nav-right {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        gap: 30px;
-        margin-right: 30px;
-
-        span {
-            text-decoration: none;
-            font-size: 24px;
-            color:white;
-            text-shadow: 1px 1px grey;
-        }
-
-        .nav-link {
-            text-decoration: none;
-            font-size: 2.5em;
-            color:white;
-            text-shadow: 1px 1px black;
-        }
-
-        // span {
-        //     font-size:24px;
-        //     color:white;
-        // }
-
+    span {
+        text-decoration: none;
+        font-size: 24px;
+        color:white;
+        text-shadow: 1px 1px grey;
+        margin-top: auto;
+        margin-bottom: auto;
     }
 }
 
@@ -78,6 +53,13 @@
 .dropdown {
     display:inline-block;
     position:relative;
+   
+
+    .menu-button {
+        margin-right: 20px;
+        width:120px;
+        font-size: 24px;
+    }
 }
 .dropdown:hover .dropdown-content {
     display: block;
@@ -87,6 +69,34 @@
     display: none;
     position: absolute;
     width: 100%;
-    overflow: auto;
+    overflow: hidden;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
+    .menu-item {
+        height:40px;
+        font-size: 24px;
+        text-decoration:none;
+        color:white;
+
+    }
+    .links {
+        padding:6px;
+        border-radius: 6px;
+    }
+    .links:link {
+        text-decoration: none;
+        color:white;
+    }
+    .links:hover {
+        color:#ffffff;
+        background-color: #486BBD;
+        cursor:pointer;
+    }
+    .link:visited {
+        color:white;
+        text-decoration: none;
+    }
+
 }
+
+ 
