--- a/public/style/nav-footer.css
+++ b/public/style/nav-footer.css
@@ -56,3 +56,17 @@
     flex-wrap: wrap;
   }
 }
+.dropdown {
+  display: inline-block;
+  position: relative;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  width: 100%;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
