changed main lobby CSS

--- a/public/src/cookieLobby.less
+++ b/public/src/cookieLobby.less
@@ -44,6 +44,7 @@
     border-radius: 25px;
     font-family: "kidGames";
     flex-direction: row;
+    box-shadow: 0 0 0.7em 0 black;
     text-shadow: 2px 2px 2px #000000;
     .avatar {
       margin-left: 10px;
@@ -57,6 +58,9 @@
     color: white;
     background-color: #2E51A0;
     border-radius: 25px;
+    box-shadow: 0 0 0.7em 0 black;
+    text-shadow: 3px 3px 3px #000000;
     font-family: "kidGames";
+    font-weight: normal;
 }
 
