--- a/public/src/style.less
+++ b/public/src/style.less
@@ -38,6 +38,8 @@ body {
 
 html {
   height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #root {
@@ -57,7 +59,8 @@ html {
     justify-content: center;
     font-family: "kidGames";
     font-size: 4em;
-    text-shadow: 3px 3px black;
+    text-shadow: 4px 4px black;
     text-align: center;
+    font-weight: normal;
   }
 }
