--- a/public/src/signuplogin.less
+++ b/public/src/signuplogin.less
@@ -140,7 +140,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-top: 40px;
+  margin-top: 10px;
 }
 
 .input-login {
@@ -209,7 +209,8 @@ form.form {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 80px;
+    align-self: center;
+    margin-bottom: 20px;
   }
 }
 
@@ -265,4 +266,35 @@ select::-ms-expand {
 
 a:visited {
   color: white;
+}
+
+@media only screen and (max-width: 750px){
+  .wrapper{
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+  .login-container{
+    max-width: 400px;
+    .login-title{
+      font-size: 40px;
+    }
+    margin:25px;
+    .form{
+      gap: 5px;
+    }
+    input{
+      height: 40px;
+      margin-bottom: 15px;
+      font-size: 20px;
+    }
+  }
+
+  div.select{
+    max-width: 300px;
+  }
+
+  .avatar-selector{
+    max-width: 300px;
+  }
+  
 }
