--- a/public/style/style.css
+++ b/public/style/style.css
@@ -285,7 +285,7 @@ button:disabled {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-top: 40px;
+  margin-top: 10px;
 }
 .input-login {
   display: flex;
@@ -342,7 +342,8 @@ form.form button {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 80px;
+  align-self: center;
+  margin-bottom: 20px;
 }
 select {
   -webkit-appearance: none;
@@ -392,6 +393,33 @@ select::-ms-expand {
 a:visited {
   color: white;
 }
+@media only screen and (max-width: 750px) {
+  .wrapper {
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+  .login-container {
+    max-width: 400px;
+    margin: 25px;
+  }
+  .login-container .login-title {
+    font-size: 40px;
+  }
+  .login-container .form {
+    gap: 5px;
+  }
+  .login-container input {
+    height: 40px;
+    margin-bottom: 15px;
+    font-size: 20px;
+  }
+  div.select {
+    max-width: 300px;
+  }
+  .avatar-selector {
+    max-width: 300px;
+  }
+}
 .lobbyContainer {
   display: flex;
   flex-direction: column;
@@ -434,6 +462,7 @@ a:visited {
   border-radius: 25px;
   font-family: "kidGames";
   flex-direction: row;
+  box-shadow: 0 0 0.7em 0 black;
   text-shadow: 2px 2px 2px #000000;
 }
 .players .avatar {
@@ -445,7 +474,10 @@ a:visited {
   color: white;
   background-color: #2E51A0;
   border-radius: 25px;
+  box-shadow: 0 0 0.7em 0 black;
+  text-shadow: 3px 3px 3px #000000;
   font-family: "kidGames";
+  font-weight: normal;
 }
 .mainLobby-container {
   display: flex;
@@ -466,7 +498,7 @@ a:visited {
 .mainLobby-container h2 {
   color: white;
   font-family: "kidGames";
-  text-shadow: 2px 2px 2px #000000;
+  text-shadow: 3px 3px 3px #000000;
   font-weight: lighter;
   margin: 20px;
 }
@@ -475,10 +507,11 @@ a:visited {
   justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 40px;
+  gap: 20px;
   box-shadow: 0 0 0.7em 0 black;
   border-radius: 20px;
   margin-bottom: 30px;
+  background-image: linear-gradient(#3D35A7, #7C72E0, #3D35A7);
 }
 .eachGame {
   background-color: #dbecfa;
@@ -488,7 +521,7 @@ a:visited {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 250px;
+  width: 250px;
   margin: 20px;
 }
 .eachGame h4 {
@@ -540,14 +573,16 @@ a:visited {
 .mainLobby-players-container {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  flex-direction: row;
   border: none;
-  max-width: 900px;
-  width: 100%;
   box-shadow: 0 0 0.7em 0 black;
   border-radius: 20px;
   margin-bottom: 30px;
-  max-height: 400px;
+  max-width: 910px;
+  height: 400px;
+  background-image: linear-gradient(#3D35A7, #7C72E0, #3D35A7);
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 .mainLobby-players-container h4 {
   color: yellow;
@@ -556,6 +591,9 @@ a:visited {
 .mainLobby-players-container .avatar {
   font-size: 2em;
   text-align: center;
+}
+.mainLobby-players-container::-webkit-scrollbar {
+  display: none;
 }
 .single-lobby-player {
   display: flex;
@@ -567,10 +605,12 @@ a:visited {
   border: dimgray;
   box-shadow: 0 0 0.5em 0.5em whitesmoke;
   margin: 20px;
-  width: 420px;
+  width: 410px;
+  order: 1;
   background-color: #1D397A;
   color: white;
   box-shadow: 0 0 0.7em 0 black;
+  order: 2;
 }
 .single-lobby-player h3 {
   margin: 20px;
@@ -585,13 +625,14 @@ a:visited {
   border: dimgray;
   box-shadow: 0 0 0.5em 0.5em whitesmoke;
   margin: 20px;
-  width: 420px;
+  width: 410px;
+  order: 1;
 }
 .main-lobby-player h3 {
   margin: 20px;
 }
 .eachGame:hover {
-  box-shadow: 0 0 0.5em 0.2em lightcoral;
+  box-shadow: 0 0 0.5em 0.1em black;
 }
 .gameThree-mainLobby-container {
   width: 150px;
@@ -601,6 +642,71 @@ a:visited {
   border-radius: 20px;
   margin: 20px;
   background-image: url("../images/memoryGame.png");
+}
+@media only screen and (max-width: 750px) {
+  .mainLobby-container .test {
+    font-size: 45px;
+  }
+  .mainLobby-players-container {
+    font-size: 9px;
+    height: 200px;
+  }
+  .main-lobby-player {
+    width: 180px;
+    display: flex;
+    margin: 7px;
+    padding: 7px;
+  }
+  .main-lobby-player h3 {
+    margin: 7px;
+  }
+  .single-lobby-player {
+    width: 180px;
+    display: flex;
+    margin: 7px;
+    padding: 7px;
+  }
+  .single-lobby-player h3 {
+    margin: 7px;
+  }
+  .gamesContainer {
+    max-height: 340px;
+    overflow: scroll;
+    overflow-x: hidden;
+  }
+  .cookieClicker-mainLobby-container {
+    height: 80px;
+    width: 80px;
+    border-radius: 1px;
+  }
+  .cookieClicker-mainLobby-container .join-button {
+    font-size: 10px;
+  }
+  .cookieClicker-mainLobby-container h2 {
+    margin: 5px;
+  }
+  .gameThree-mainLobby-container {
+    height: 80px;
+    width: 80px;
+    border-radius: 1px;
+  }
+  .gameThree-mainLobby-container .join-button {
+    font-size: 10px;
+  }
+  .gameThree-mainLobby-container h2 {
+    margin: 5px;
+  }
+  .gameTwo-mainLobby-container {
+    height: 80px;
+    width: 80px;
+    border-radius: 1px;
+  }
+  .gameTwo-mainLobby-container .join-button {
+    font-size: 10px;
+  }
+  .gameTwo-mainLobby-container h2 {
+    margin: 5px;
+  }
 }
 .cookieClicker-loading-screen {
   display: flex;
@@ -761,6 +867,7 @@ a:visited {
   display: flex;
   justify-content: space-between;
   background-color: #486BBD;
+  width: 100vw;
 }
 .navBar .logo {
   display: flex;
@@ -770,18 +877,24 @@ a:visited {
   flex-direction: row;
 }
 .navBar .logo span {
-  font-family: 'Tourner';
+  font-family: 'kidGames';
   font-size: 4em;
-  text-shadow: 2px 2px black;
-  color: lightgray;
+  text-shadow: 3px 3px white;
+  color: #574FC2;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  -webkit-text-stroke: 0.2px #3e0781;
 }
 .navBar span {
+  display: flex;
   text-decoration: none;
   font-size: 24px;
   color: white;
-  text-shadow: 1px 1px grey;
+  text-shadow: 2px 2px black;
   margin-top: auto;
   margin-bottom: auto;
+  font-weight: bolder;
+  text-align: center;
 }
 .footer {
   background-color: #486BBD;
@@ -801,6 +914,9 @@ a:visited {
 .dropdown {
   display: inline-block;
   position: relative;
+  background-color: #486BBD;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-right: 10px;
 }
 .dropdown .menu-button {
   margin-right: 20px;
@@ -809,23 +925,31 @@ a:visited {
 }
 .dropdown:hover .dropdown-content {
   display: block;
+  background-color: #486BBD;
+  border-radius: 5px;
+  margin-right: 30px;
 }
 .dropdown-content {
   display: none;
   position: absolute;
-  width: 100%;
+  width: 190px;
   overflow: hidden;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  margin-right: 30px;
 }
 .dropdown-content .menu-item {
   height: 40px;
   font-size: 24px;
   text-decoration: none;
   color: white;
+  margin: 9px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .dropdown-content .links {
   padding: 6px;
   border-radius: 6px;
+  margin: 5px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .dropdown-content .links:link {
   text-decoration: none;
@@ -1068,6 +1192,8 @@ body {
 }
 html {
   height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 #root {
   width: 100vw;
@@ -1085,6 +1211,7 @@ html {
   justify-content: center;
   font-family: "kidGames";
   font-size: 4em;
-  text-shadow: 3px 3px black;
+  text-shadow: 4px 4px black;
   text-align: center;
+  font-weight: normal;
 }
