changed CSS on edit form

--- a/public/src/profile.less
+++ b/public/src/profile.less
@@ -54,3 +54,27 @@
         width:300px;
     }
 }
+
+@media only screen and (max-width: 750px){
+    .profile{
+        max-width: 380px;
+        font-size: 10px;
+    }
+    
+    .editProfile {
+        width: 300px;
+        button{
+            font-size: 15px;
+        }
+        
+    }
+    
+    div.select{
+        max-width: 200px;
+      }
+    
+      .avatar-selector{
+        max-width: 200px;
+      }
+
+}
