--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1077,6 +1077,24 @@ a:visited {
 .editProfile .select {
   width: 300px;
 }
+@media only screen and (max-width: 750px) {
+  .profile {
+    max-width: 380px;
+    font-size: 10px;
+  }
+  .editProfile {
+    width: 300px;
+  }
+  .editProfile button {
+    font-size: 15px;
+  }
+  div.select {
+    max-width: 200px;
+  }
+  .avatar-selector {
+    max-width: 200px;
+  }
+}
 .chart {
   background-color: white;
   width: 90%;
