added single player Memory game and added shuffle to multiplayer Memory

--- a/public/src/memory.less
+++ b/public/src/memory.less
@@ -111,6 +111,13 @@
     }
   }
   @media screen and (max-width: 530px) {
+    .memoryWrapper{
+      display: flex;
+      align-items: center;
+    }
+    .memory-wrapper{
+      max-width: 370px;
+    }
     .cards{
       height: 300px;
       width: 300px;
