--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1222,6 +1222,13 @@ body {
   }
 }
 @media screen and (max-width: 530px) {
+  .memoryWrapper {
+    display: flex;
+    align-items: center;
+  }
+  .memory-wrapper {
+    max-width: 370px;
+  }
   .cards {
     height: 300px;
     width: 300px;
