WhackAMoleSingle.js added

--- a/public/src/loadingPage.less
+++ b/public/src/loadingPage.less
@@ -68,7 +68,7 @@
 .memory-set {
   animation: mymove 2s;
   animation-delay: 2s;
-  background-image: url(https://play-lh.googleusercontent.com/HWP-6hhjxv4zFJvNDlf350CbeBvGEUtqLCUrN61TyqHgFq7RoQDMMgWvyazcBU-Win8=w240-h480-rw);
+  background-image: url(https://image.winudf.com/v2/image1/Y29tLnNtaWxlcmxlZS5qZXdlbHNfaWNvbl8xNTY2ODkyMjcxXzAzNQ/icon.png?fakeurl=1&h=240&type=webp);
 }
 
 .go {
