added few script changes to slideGame

--- a/public/src/slideGame.less
+++ b/public/src/slideGame.less
@@ -3,7 +3,7 @@
     width: 400px;
 }
 
-#board {
+.board {
     width: 360px;
     height: 360px;
     background-color: lightblue;
@@ -13,8 +13,9 @@
     flex-wrap: wrap;
 }
 
-#board img {
+.board img {
     width: 118px;
     height: 118px;
     border: 1px solid #0c67ae;
 }
+
