changed CSS for singlePlayer whack-a-mole

--- a/public/src/whackAMole.less
+++ b/public/src/whackAMole.less
@@ -22,3 +22,13 @@
 .hit{
     background-image: url("https://studio.code.org/v3/assets/o7BkGtOAPgv4W1PcGfEY_zg3RZBXqekP7ovkgKtrYx0/pic5abfb8c76243f4_512x-_51645367.png");
 }
+
+@media screen and (max-width: 700px) {
+    #whack-a-mole {
+        width: 380px;
+    }
+    .hole{
+        width: 90px;
+        height: 103px;
+    }
+}
