--- a/public/style/whackAMole.css
+++ b/public/style/whackAMole.css
@@ -19,3 +19,9 @@
 .hit {
   background-image: url("https://studio.code.org/v3/assets/o7BkGtOAPgv4W1PcGfEY_zg3RZBXqekP7ovkgKtrYx0/pic5abfb8c76243f4_512x-_51645367.png");
 }
+@media screen and (max-width: 700px) {
+  #whack-a-mole {
+    width: 390px;
+    height: 390px;
+  }
+}
